fixing the alignments

--- a/client/scss/main.scss
+++ b/client/scss/main.scss
@@ -169,7 +169,7 @@ footer img {
 	}
 	&.active .sr-only.close{
 		display:block;
-		z-index:99
+		z-index:99;
 	}
 }
 .sidenav {
